# ifood-data-engineering-test

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.ipynb
docs/: solution_documentation.md
infrastructure/: main.tf  outputs.tf  variables.tf
modules/: data_transformer.py  log_decorator.py  raw_data_collector.py  s3_data_loader.py
src/: README.md
src/etl/: data_acquisition.py  data_acquisition_log.txt  pipeline.py
src/hive/: yellow_taxi.sql
