[project]
name = "ifood-de-test"
version = "0.1.0"
description = ""
authors = [
    {name = "larryfisherman25",email = "matheusfgiraldes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "boto3 (>=1.37.34,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
